// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processor applies the nest-atrules plugin 1`] = `
"
      .root {
        color: red;
      @media (min-width: 10px) {
          display: block
      }
      }
    "
`;

exports[`processor applies the nest-pseudo plugin 1`] = `
"
      .a {
      :hover {
        color: red;
      }
      }
      .b {
      :hover {
        color: hotpink
      }
      }
      .b {
        color: hotpink
      }
    "
`;

exports[`processor applies the split-grouped-selectors plugin 1`] = `
"
      .a {
        color: red;
      }
      .b {
        color: red;
      }
    "
`;

exports[`processor mixed nest-atrules and nest-pseudo 1`] = `
"
        .a {
        :hover {
      @media (min-width: 10px) {
          color: red
      }
        }
        }
    "
`;
